--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,4 +25,4 @@ jobs:
           pip install -r requirements.txt
       - name: Run Training and Tests
         run: |
-          python ola ride request forecasting.py
+          python ola-ride-request-forecasting.py
